# ZmmCL

./: .gitignore  CMakeLists.txt  INode.cc  INode.hh  Makefile  Node.cc  Node.hh  README.md
AST/: Node.cc  Node.hh
driver/: driver.cc  driver.hh
grammar/: grammar.l  grammar.y
tests/err_tests/: 0_expended_SCL_NOW_EXPENDED_PRINT.zmm  1_unexpended_EOL.zmm  2_multi_operatuons.zmm  3_invalid_input.zmm  4_unknown_var.zmm  5_unknown_operator.zmm  6_rvalue_error.zmm  7_brocken_multi_comment.zmm  8_div_0.zmm  9_div_mod_0.zmm
tests/good_tests/: 10_multi_comment.zmm  1_one_line_comment.zmm  2_if_print.zmm  3_if_sc.zmm  4_check_pr.zmm  5_unary_input_5.zmm  6_scopes.zmm  7_logoc.zmm  8_factorial_temp_input_5.zmm  9_min_if.zmm
